[package]
name = "owopad"
version = "0.1.2"
edition = "2021"
authors = ["Chrontax"]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
fugit = "0.3.7"
rp2040-boot2 = "0.3.0"
rp2040-flash = "0.4.0"
rp2040-hal = { version = "0.9.2", features = [ "critical-section-impl" ] }
rp2040-panic-usb-boot = { git = "https://github.com/chrontax/rp2040-panic-usb-boot" }
usb-device = "0.2.7"
usbd-human-interface-device = "0.4.5"
usbd-serial = "0.1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
